# dFC_task_presence

./: .gitignore  README.md  conda_env.txt  config.yaml.example  dim_reduction_visual.ipynb  main.py  model_classification.ipynb  pyproject.toml  real_CNN.py  requirements.txt  simulation_CNN.ipynb  simulation_CNN.py  simulation_GCN.ipynb  simulation_dim_reduction_visual.ipynb  simulation_model_classification.ipynb
notebooks/: CNN.ipynb  GCN.ipynb  ML_classification.ipynb  ML_dim_reduction.ipynb  figures.ipynb  figures_data.ipynb  figures_performance.ipynb
scripts/: CNN.py  CNN_multichannel.py  GCN.py
utilities/: __init__.py  train_utils.py  utils.py
