[project]
name = "dfc-task-presence"
version = "0.1.0"
description = "Exploratory project to improve classification of task and rest time points using dFC data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contrastive>=1.2.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nbconvert>=7.16.6",
    "numpy>=2.1.2",
    "pandas>=2.3.1",
    "pillow>=11.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorly>=0.9.0",
    "timm>=1.0.19",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "umap>=0.1.1",
]
